<resources>
    <string name="app_name">你好繁</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <!--drawer navigation title-->
    <string name="nav_home">主页</string>
    <string name="nav_s2t">一简对多繁</string>
    <string name="jump_s2t">开始学习</string>
    <string name="nav_t2s">一繁对多简</string>
    <string name="nav_reading">阅读</string>
    <string name="nav_history">历史</string>
    <string name="nav_setting">设置</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--按钮文字-->
    <string name="button_clean">重写</string>
    <string name="button_next">下一个</string>
    <string name="button_exit">退出登录</string>

    <string name="sign_1">连续签到</string>
    <string name="sign_2">个</string>
    <string name="sign_3">今天需要学习的汉字</string>

    <!-- LearnWritingActivity-->
    <string name="pinyin">拼音</string>
    <string name="phrase">词组</string>
    <string name="jianfan">简繁: </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">同步</string>
    <string name="info_header">用户</string>
    <string name="study_header">学习</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Login -->
    <string name="toast_username">请输入用户名</string>
    <string name="toast_password">请输入密码</string>
    <string name="toast_mismatch">用户名或者密码有误</string>
</resources>
